# geometric_algebra

./: .gitignore  CLAUDE.md  README.md  run_ex.sh
docs/: gasandbox_api.md
src/: CMakeLists.txt
src/chap1/: CMakeLists.txt
src/chap10/: CMakeLists.txt
src/chap10/ex3/: extcalibrefine.cpp
src/chap11/: CMakeLists.txt
src/chap11/ex2/: chap11ex2.cpp
src/chap12/: CMakeLists.txt
src/chap13/: CMakeLists.txt
src/chap14/: CMakeLists.txt
src/chap15/: CMakeLists.txt
src/chap16/: CMakeLists.txt
src/chap2/: ALL_CODE.txt  CMakeLists.txt  README.md
src/chap3/: ALL_CODE.txt  CMakeLists.txt  README.md
src/chap4/: ALL_CODE.txt  CMakeLists.txt  README.md
src/chap5/: CMakeLists.txt  EXERCISES.md  README.md
src/chap6/: CMakeLists.txt  README.md
src/chap7/: CMakeLists.txt  EXERCISES.md  README.md
src/chap8/: EXERCISES.md  README.md
src/ga_sandbox-1.0.7/: Makefile.in  configure  configure.ac
src/ga_sandbox-1.0.7/attic/: Makefile.in
src/ga_sandbox-1.0.7/attic/gaigen2hp/: Makefile.in
src/ga_sandbox-1.0.7/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
src/ga_sandbox-1.0.7/chap1/: Makefile.in
src/ga_sandbox-1.0.7/chap1/ex1/: Makefile.in
src/ga_sandbox-1.0.7/chap10/: Makefile.in
src/ga_sandbox-1.0.7/chap10/ex1/: Makefile.in
src/ga_sandbox-1.0.7/chap10/ex2/: Makefile.in
src/ga_sandbox-1.0.7/chap10/ex3/: Makefile.in
src/ga_sandbox-1.0.7/chap11/: Makefile.in
src/ga_sandbox-1.0.7/chap11/ex1/: Makefile.in
src/ga_sandbox-1.0.7/chap11/ex2/: Makefile.in
src/ga_sandbox-1.0.7/chap11/ex3/: Makefile.in
src/ga_sandbox-1.0.7/chap11/ex4/: Makefile.in
src/ga_sandbox-1.0.7/chap12/: Makefile.in
src/ga_sandbox-1.0.7/chap12/ex1/: Makefile.in
src/ga_sandbox-1.0.7/chap12/ex2/: Makefile.in  chap12ex2.cpp
src/ga_sandbox-1.0.7/chap12/ex3/: Makefile.in
src/ga_sandbox-1.0.7/chap13/: Makefile.in
src/ga_sandbox-1.0.7/chap13/ex1/: Makefile.am  Makefile.in
src/ga_sandbox-1.0.7/chap13/ex2/: Makefile.in
src/ga_sandbox-1.0.7/chap13/ex3/: Makefile.in
src/ga_sandbox-1.0.7/chap13/ex4/: Makefile.in
src/ga_sandbox-1.0.7/chap14/: Makefile.in
src/ga_sandbox-1.0.7/chap14/ex1/: Makefile.in
src/ga_sandbox-1.0.7/chap14/ex2/: Makefile.in
src/ga_sandbox-1.0.7/chap14/ex3/: Makefile.in
src/ga_sandbox-1.0.7/chap14/ex4/: Makefile.in  chap14ex4.cpp
src/ga_sandbox-1.0.7/chap15/: Makefile.in
src/ga_sandbox-1.0.7/chap15/ex1/: Makefile.in
src/ga_sandbox-1.0.7/chap15/ex2/: Makefile.in
src/ga_sandbox-1.0.7/chap15/ex3/: Makefile.am  Makefile.in
src/ga_sandbox-1.0.7/chap16/: Makefile.in
src/ga_sandbox-1.0.7/chap16/ex1/: Makefile.in
src/ga_sandbox-1.0.7/chap16/ex2/: Makefile.am  Makefile.in
src/ga_sandbox-1.0.7/chap16/ex3/: Makefile.in
src/ga_sandbox-1.0.7/chap16/ex4/: Makefile.in
src/ga_sandbox-1.0.7/chap2/: EXERCISES.md  Makefile.in
src/ga_sandbox-1.0.7/chap2/ex1/: Makefile.in
src/ga_sandbox-1.0.7/chap2/ex2/: Makefile.in
src/ga_sandbox-1.0.7/chap2/ex3/: Makefile.in
src/ga_sandbox-1.0.7/chap3/: EXERCISES.md  Makefile.in
src/ga_sandbox-1.0.7/chap3/ex1/: Makefile.in
src/ga_sandbox-1.0.7/chap3/ex2/: Makefile.in
src/ga_sandbox-1.0.7/chap3/ex3/: Makefile.in
src/ga_sandbox-1.0.7/chap3/ex4/: Makefile.in
src/ga_sandbox-1.0.7/chap4/: EXERCISES.md  Makefile.in
src/ga_sandbox-1.0.7/chap4/ex1/: Makefile.in
src/ga_sandbox-1.0.7/chap4/ex2/: Makefile.in
src/ga_sandbox-1.0.7/chap4/ex3/: Makefile.in
src/ga_sandbox-1.0.7/chap5/: Makefile.in
src/ga_sandbox-1.0.7/chap5/ex1/: Makefile.in
src/ga_sandbox-1.0.7/chap5/ex2/: Makefile.in
src/ga_sandbox-1.0.7/chap5/ex3/: Makefile.in
src/ga_sandbox-1.0.7/chap6/: EXERCISES.md  Makefile.in
src/ga_sandbox-1.0.7/chap6/ex1/: Makefile.in
src/ga_sandbox-1.0.7/chap6/ex2/: Makefile.in
src/ga_sandbox-1.0.7/chap7/: Makefile.in
src/ga_sandbox-1.0.7/chap7/ex1/: Makefile.in
src/ga_sandbox-1.0.7/chap7/ex2/: Makefile.in
src/ga_sandbox-1.0.7/chap7/ex3/: Makefile.in
src/ga_sandbox-1.0.7/chap7/ex4/: Makefile.in
src/ga_sandbox-1.0.7/chap7/ex5/: Makefile.in
src/ga_sandbox-1.0.7/chap8/: Makefile.in
src/ga_sandbox-1.0.7/ext_include/: Makefile.in
src/ga_sandbox-1.0.7/lib_win32/: Makefile.in
src/ga_sandbox-1.0.7/libgasandbox/: Makefile.in
src/ga_sandbox-1.0.7/libgasandbox_no_opt/: Makefile.in
src/ga_sandbox-1.0.7/qhull-2003.1/: Makefile.in
src/ga_sandbox-1.0.7/qhull-2003.1/eg/: Makefile.in
src/ga_sandbox-1.0.7/qhull-2003.1/html/: Makefile.in
src/ga_sandbox-1.0.7/qhull-2003.1/src/: Makefile.in
src/ga_sandbox-1.0.7/qhull-2003.1/vs.net/: Makefile.in
src/ga_sandbox-1.0.7/screenshots/: Makefile.in
src/ga_sandbox-1.0.7/solutions/: Makefile.in
src/ga_sandbox-1.0.7/solutions/chap11/: Makefile.in
src/ga_sandbox-1.0.7/solutions/chap11/ex4/: Makefile.in
src/ga_sandbox-1.0.7/solutions/chap13/: Makefile.in
src/ga_sandbox-1.0.7/solutions/chap13/ex2/: Makefile.in
src/ga_sandbox-1.0.7/solutions/chap14/: Makefile.in
src/ga_sandbox-1.0.7/solutions/chap14/ex2/: Makefile.in
src/ga_sandbox-1.0.7/solutions/chap2/: Makefile.in
src/ga_sandbox-1.0.7/solutions/chap2/ex2/: Makefile.in
src/ga_sandbox-1.0.7/solutions/chap3/: Makefile.in
src/ga_sandbox-1.0.7/solutions/chap3/ex2/: Makefile.in
src/ga_sandbox-1.0.7/solutions/chap6/: Makefile.in
src/ga_sandbox-1.0.7/solutions/chap6/ex1/: Makefile.in
src/ga_sandbox-1.0.7/solutions/chap7/: Makefile.in
src/ga_sandbox-1.0.7/solutions/chap7/ex4/: Makefile.in
src/ga_sandbox-1.0.7/solutions/vs.net/: Makefile.in
src/ga_sandbox-1.0.7/solutions/vs2005/: Makefile.in
src/ga_sandbox-1.0.7/solutions/vs2008/: Makefile.in
src/ga_sandbox-1.0.7/vs.net/: Makefile.in
src/ga_sandbox-1.0.7/vs2005/: Makefile.in
src/ga_sandbox-1.0.7/vs2008/: Makefile.in
src/ga_sandbox-1.0.7/xcode/: Makefile.in
src/ga_sandbox-1.0.7/xcode/GA_Sandbox.xcodeproj/: Makefile.in
src/libgasandbox/: CMakeLists.txt
src/qhull-2003.1/: CMakeLists.txt
(+104 files in other folders)
