add_executable(chap16ex1 ex1/chap16ex1.cpp)
target_link_libraries(chap16ex1 gasandbox)

add_executable(chap16ex2 ex2/chap16ex2.cpp)
target_link_libraries(chap16ex2 gasandbox)

add_executable(chap16ex3 ex3/chap16ex3.cpp)
target_link_libraries(chap16ex3 gasandbox)

add_executable(chap16ex4 ex4/chap16ex4.cpp)
target_link_libraries(chap16ex4 gasandbox)
